# karo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  pyproject.toml  test.py
.karo_chroma_db/: chroma.sqlite3
docs/: README.md  index.md  installation.md
docs/official-docs/: index.md  installation.md
docs/official-docs/api/: index.md
docs/official-docs/getting-started/: core-concepts.md  quickstart.md
docs/official-docs/guides/: agents.md  deployment.md  logging.md  memory.md  prompts.md  sessions.md  tools.md
examples/: README.md
examples/base-examples/: 1_basic_chatbot.py  2_multi_provider_setup.py  3_chat_with_memory.py  4_agent_with_tools.py  5_system_prompt_builder_example.py
examples/excel-summarizer/: README.md  __init__.py  excel_reader_tool.py  main.py  pyproject.toml  sample_data.xlsx
examples/excel_summarizer/: excel_reader_tool.py  main.py  pyproject.toml
examples/newsletter_agent/: README.md  main.py  pyproject.toml
examples/order-chatbot/: README.md  __init__.py  csv_order_reader_tool.py  faq_data.json  main.py  orders.csv  pyproject.toml
examples/order-chatbot/.karo_orderbot_db/: chroma.sqlite3
examples/order_chatbot/: agent_definition.yaml  csv_order_reader_tool.py  main.py  pyproject.toml
examples/order_chatbot/.karo_orderbot_db/: chroma.sqlite3
karo/core/: base_agent.py
karo/tools/: README.md
tests/: README.md
tests/core/: test_base_agent.py
tests/memory/: __init__.py  test_memory_manager.py
tests/memory/services/: __init__.py  test_chromadb_service.py
tests/memory/tools/: __init__.py  test_memory_query_tool.py  test_memory_store_tool.py
tests/prompts/: test_system_prompt_builder.py
tests/providers/: __init__.py  test_anthropic_provider.py
tests/tools/: __init__.py  test_calculator_tool.py  test_document_reader_tool.py
tests/tools/sample_docs/: sample.docx  sample.md  sample.txt
